--- a/src/app/admin/components/theory-section/theory-section.component.scss
+++ b/src/app/admin/components/theory-section/theory-section.component.scss
@@ -6,6 +6,10 @@
     border: 2px dashed #FFFF00;
 }
 
+// .currentAddSubSections {
+//     border: 2px dashed #4527A0;
+// }
+
 .drag-and-drop {
     border: 1px dashed gray;
 
