--- a/src/app/admin/components/top-nav/top-nav.component.html
+++ b/src/app/admin/components/top-nav/top-nav.component.html
@@ -14,7 +14,7 @@
   </button>
 
   <ng-template #loginBtn>
-    <button mat-flat-button color="accent">
+    <button [routerLink]="['/admin']" mat-flat-button color="accent">
       Login <mat-icon>login</mat-icon>
     </button>
   </ng-template>
