--- a/src/app/admin/shared/create-content/create-content.component.scss
+++ b/src/app/admin/shared/create-content/create-content.component.scss
@@ -1,6 +1,6 @@
 .create-content {
     min-height: 100px;
-    border: 2px #FFFF00 dashed;
+    border: 2px #4527A0 dashed;
     padding: 50px 0;
     margin-top: 25px;
 }
