--- a/src/app/admin/components/theory-section/theory-section.component.html
+++ b/src/app/admin/components/theory-section/theory-section.component.html
@@ -76,7 +76,7 @@
       <div [@fade] class="mt-2 ">
         <div class="section" *ngFor="let section of dataWithChanges; let sectionIdx=index">
           <mat-divider></mat-divider>
-          <div class="btn-container flex">
+          <div class="flex">
             <button (click)="addContentInSection(sectionIdx)" class="edit-btn mini-btn" mat-icon-button color="primary">
               <mat-icon class="mini-icon">add_box</mat-icon>
             </button>
